# FreeDVMonitor

./: .gitignore  CMakeLists.txt  README.md
cmake/: BuildOpus.cmake  mingw-toolchain.cmake  mingw-w64-x86_64.cmake
scripts/: setup-mingw-gtk.sh
src/: app_window.cpp  app_window.h  audio_backend.h  audio_pulse.cpp  audio_wasapi.cpp  main.cpp  rade_api.c  rade_api.h  rade_core.h  rade_decoder.cpp  rade_decoder.h  rade_rx.c  rade_tx.c  rade_tx.h
tests/: test_loopback.c
